------------------------------
AmiSSL Open Source - ChangeLog
------------------------------

$Id$
$URL$

2014-09-11 Thore Böckelmann <tboeckel@gmx.de>

  * misc: lots of changes to get at least amisslmaster.library built with the
    typical baserel stuff for AmigaOS3. The necessary relocation of the .data
    section is yet missing and needs to be ported over from the libnix sources.

2014-09-09 Jens Maus <mail@jens-maus.de>

  * amissl_library.c: replaced deprecated use of CRYPTO_set_id_callback() with
    CRYPTO_THREADID_set_callback() and also implemented locking mechanism
    functions according to the CRYPTO_set_dynlock_XXX_callback() API.
  * Makefile, openssl/util/pl/amiga-mos.pl: create a first version of the
    neccessary build files to get AmiSSL compiled for MorphOS in future.

2014-09-05 Jens Maus <mail@jens-maus.de>

  * misc: general cleanup to make the sources more compatible to programming
    style of OpenSSL (e.g. definition of OPENSSL_SYS_AMIGA). Thus, the sources
    should produce way nicer diffs against the upstream sources of OpenSSL.
    Also removed support for SAS/C builds as it is anyway way to broken now and
    will never be used again.

2014-09-04 Jens Maus <mail@jens-maus.de>

  * misc: reverted some basic changes which prevented the OS4 build to be linked
    properly. In addition the OS3 build also complained about missing memcpy()
    functions which pointed out that there was a general build system problem. We
    are quite near now to get a linked os3 binary of amissl.library.

2014-09-03 Jens Maus <mail@jens-maus.de>

  * misc: after finally being able to convert the os3 sfd file to proper clib and
    inline files applied some changes to get AmiSSL compiled for OS3/gcc. At least
    it compiles now until the first test binary. So lets see how fast we can solve
    that.

2014-08-27 Thore Böckelmann <tboeckel@gmx.de>

  * misc: lots of changes to get this beast buildable for AmigaOS3. This is