@@ -58,13 +58,11 @@ socket(
 
 #include <dos/dos.h>
 
-void initialize_socket_errno(void)
+void initialize_socket_errno(AMISSL_STATE *state)
 {
-	kprintf("%s\n", __FUNCTION__);
-	{
-	GETSTATE();
 	kprintf("%s %08lx\n", __FUNCTION__, state);
-	{
+
+  {
 	struct TagItem tags[] =
 	{
 		{ SBTM_SETVAL(SBTC_ERRNOLONGPTR), (ULONG)state->errno_ptr },
@@ -118,7 +116,7 @@ void initialize_socket_errno(void)
 		state->socket_errno_initialized = 1;
 	}
 #endif
-	}
-	}
+  }
+
 	kprintf("%s done\n", __FUNCTION__);
 }
